# organon-mueller

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README-mcp.md  README-ui.md  ROADMAP.md  VERIFICATION.md  architecture.md  candidate-findings.md  design-note-addition-scalars.md  design-note-guarded-atoms.md  egglog-large-graph-pathology.md  egglog-spike.md  egglog-upstream-issue-draft.md  novelty-protocol.md  phase-c-retrospective.md  phase-d-retrospective.md  retrospective-frozen7.md  retrospective-v2.md  term-language-extensions.md  user-guide.md  v1.0-tag-proposal.md  v1.2-tag-proposal.md  v1.3.0-tag-proposal.md  v2.0-tag-proposal.md
docs/kuntman-package/: ADDENDUM-dipoles-en.md  ADDENDUM-dipoles-tr.md  README-en.md  README-tr.md  demo.py  sample-report.tex
examples/: demo.py
probes/: probe-dipoles-prespec.py  probe-ensemble-prespec.py  probe-gamma-prespec.py  probe-guarded-hermitian-unitary.py  probe-lorentz-recovery.py  probe-lorentz-sweep.py  probe-lorentz-sweep2.py  probe-lorentz-task1.py  probe-lorentz-task2.py  probe-rank3-prespec.py
reports/: milestone-ui-01-REPORT.md  milestone-ui-02-REPORT.md  stage-00-REPORT.md  stage-01-REPORT.md  stage-02-REPORT.md  stage-03-REPORT.md  stage-04-REPORT.md  stage-05-REPORT.md  stage-06-REPORT.md  stage-07-REPORT.md  stage-08-REPORT.md  stage-09-REPORT.md  stage-10-REPORT.md  stage-11-REPORT.md  stage-12-REPORT.md  stage-13-REPORT.md  stage-14-REPORT.md  stage-15-REPORT.md  stage-16-REPORT.md  stage-17-REPORT.md  stage-18-REPORT.md  stage-19-REPORT.md  stage-20-REPORT.md  stage-21-REPORT.md  stage-22-REPORT.md  sweep-01-results.json  sweep-02-results.json  sweep-03-rank3.json  sweep-lorentz-01.json
specs/: lorentz-L0.md  lorentz-L1.md  lorentz-L2.md  lorentz-L3.md  lorentz-L4.md  lorentz-L5.md  lorentz-L6.md  milestone-ui-01.md  milestone-ui-02.md  milestone-ui-03.md  stage-00.md  stage-01.md  stage-02.md  stage-03.md  stage-04.md  stage-05.md  stage-06.md  stage-07.md  stage-08.md  stage-09.md  stage-10.md  stage-11.md  stage-12.md  stage-13.md  stage-14.md  stage-15.md  stage-16.md  stage-17.md  stage-18.md  stage-19.md  stage-20.md  stage-21.md  stage-22.md  wordalgebra-01.md
spikes/: bench_stage3.py  egglog_pathology_probe.py  egglog_quaternion.py
src/organon_mueller/: __init__.py  conditions.py  safe_parse.py  serialize.py  verify.py
src/organon_mueller/algebra/: __init__.py  basis.py  quaternion.py  states.py
src/organon_mueller/decomposition/: __init__.py  composite.py  covariance.py  derive.py  rank3.py  solve.py
src/organon_mueller/dipoles/: __init__.py  dimer.py  ensemble.py  general.py  hybrid.py
src/organon_mueller/discovery/: __init__.py  axioms.py  engine.py  fingerprint.py  guards.py  interpret.py  recovery.py  sweep.py  symbolic.py  terms.py
src/organon_mueller/identities/: __init__.py  known.py
src/organon_mueller/lorentz/: __init__.py  core.py  discovery.py  identities.py  terms.py
src/organon_mueller/mcp_server/: __init__.py  server.py  tools.py
src/organon_mueller/reporting/: __init__.py  report.py
src/organon_mueller/ui/: __init__.py  app.py  loaders.py
src/organon_mueller/wordalgebra/: __init__.py  alphabet.py  briefs.py  expand.py  solve.py  spec.py
studies/tanzer2/: sigma_identities.py  test_sigma_identities.py
tests/: test_basis.py  test_composite_decomposition.py  test_conditions.py  test_decomposition.py  test_dipoles.py  test_discovery.py  test_docs.py  test_ensemble.py  test_extended_language.py  test_fixtures.py  test_general_dimer.py  test_guarded_atoms.py  test_isomorphisms.py  test_known_identities.py  test_lorentz.py  test_lorentz_discovery.py  test_lorentz_task1.py  test_lorentz_task2.py  test_lorentz_terms.py  test_lorentz_tool.py  test_properties.py  test_quaternion.py  test_rank3.py  test_recovery.py  test_reporting.py  test_security.py  test_serialize.py  test_stage11_iter.py  test_sweep.py  test_symbolic.py  test_ui.py  test_ui_files.py  test_web_ui.py  test_wordalgebra_alphabet.py  test_wordalgebra_expand.py  test_wordalgebra_solve.py
web/: example.json  index.html
