[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "organon-mueller"
version = "1.0.0"
description = "Symbolic engine for the Stokes-Mueller algebra of polarization optics: Mueller-matrix decomposition, certified identity discovery (equality saturation + exact symbolic proof), coupled-dipole modelling, and evidence-labelled LaTeX reporting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sympy>=1.12",
    "numpy>=1.24",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0; python_version >= '3.10'"]
test = ["pytest>=7.0", "hypothesis>=6.0"]
# egglog publishes wheels for Python >=3.11 only; on 3.10 the extra resolves
# to nothing and the discovery tests self-skip (pytest.importorskip).
discovery = ["egglog>=13.0; python_version >= '3.11'"]
# local web interface (UI-1 milestone): binds to 127.0.0.1 only, never
# shared/hosted — see docs/README-ui.md. gradio >= 6: the app uses the
# gradio-6 Dataframe API (column_count).
ui = ["gradio>=6.0"]

[project.scripts]
organon-ui = "organon_mueller.ui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
